tests/golden/type_errors/for_in_non_array_static.err
Type error at 1:5: for-in expects array or range, got number
  for x in 123 {
      ^
